FO-2944 Gi systembrukeren til pam-cv-api tilgang til oppfolging feeden